# Intel8086_decoder

./: .gitignore  CMakeLists.txt  README.md  instruction_specification_table.txt
instructions_specification/: instruction_specification_table.txt
src/: instruction_decoder.cpp  instruction_decoder.hpp  instruction_info_test.cpp  instruction_printer.cpp  instruction_printer.hpp  instruction_specification_builder.cpp  instruction_specification_builder.hpp  instruction_specification_builder_test.cpp  io_utils.cpp  io_utils.hpp  main.cpp
